// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary correctly 1`] = `
<div>
  <h1>
     Viewing 
    3
     
    expenses
     totalling 
    $1,135.9500
     
  </h1>
</div>
`;

exports[`should render one expense on expense summary correctly 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $678.0000
     
  </h1>
</div>
`;
